# langchain-demo

./: 04.mistral_demo  08.travelguide_demo.py  10.travelguide_ollama_demo.py  12.simple_sequential_chain_demo.py  13.blogpost_generator.py  15.sequential_chain_demo.py  17.marketing_email_generator_assignment.py  gemma_demo  openai_demo  pyproject.toml
04.basics/: 04.1-openai_demo.py  04.2-gemma_demo.py  04.3-mistral_demo.py  04.4-.streamlit_demo.py  04.5-turnon_debug.py
05.prompttemplates/: 05.1-prompttemplate_demo.py  05.1b-openai_prompt_template_demo.py  05.2-prompttemplate_demo2.py  05.2b-ollama_prompt_template_demo.py  05.3c-travel_guide_assignment.py  05.3d-travel_guide_ollama_assig.py
06.chains/: 06.2a-travel_guide_assignment.py  06.2b-speech_gen_simple_sequential.py
07-chat_history/: 07.2-streamlit_chat_history_demo.py  07.4-chat_history_demo.py
07.chat_history/: 07.1-chat_prompt_temp_demo.py  07.3-display_chat_history_demo.py  07.4-chat_history_demo.py
08.embeddings/: 08.1-embeddings_demo.py  08.2-similarity_finder_demo.py  08.3-embeddings_ollama_demo.py  08.4-embeddings_multi_demo.py
09.vector_stores/: 09.1-job_search_helper.py  09.2-job_search_helper_retriever.py  09.3-job_search_helper_ollama.py  09.4-job_search_helper_retriever_FAISS.py
10.rag/: 10.1-rag_demo.py  10.2-historyaware_rag_demo.py  10.3-pdf_rag_demo.py
basics/: 05.streamlit_demo.py
chains/: 11.lcel_demo.py  14.multiple_llm_in_simple_sequential_chain_demo.py  16.sequential_chain_format_output_demo.py
prompttemplates/: 09.interview_tip_generator.py
(+4 files in other folders)
